gallery and description spacing fixed

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,9 @@
 @import "../../public/general.css";
 
+.container {
+  width: 100%;
+}
+
 .sidenav__container {
   height: 100vh;
 }
@@ -17,7 +21,6 @@
 }
 
 .sidenav__content {
-  /* background: blueviolet; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -43,7 +46,6 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  /* background: chartreuse; */
 }
 
 .attribution {
@@ -65,14 +67,13 @@
 
 @media (min-width: 875px) {
 
-  .gallery {
+  /* .gallery {
     padding-left: 20px;
-    /* background-color: rebeccapurple; */
-  }
+    background-color: rebeccapurple;
+  } */
 
   .container {
-    /* background: hotpink; */
-    max-width: 1125px;
+    max-width: 1150px;
   }
 
   .grid {
