--- a/src/app/components/description/description.component.css
+++ b/src/app/components/description/description.component.css
@@ -113,19 +113,37 @@
 
 @media (min-width: 875px) { 
 
+    /* .main {
+        min-width: 400px;
+        width: 100%;
+    } */
+
     .container {
         /* background: gray; */
-        max-width: 900px;
+        /* max-width: 900px; */
+        max-width: 450px;
         margin-top: 120px;
+    }
+
+    .main__paragraph {
+        margin: 30px 0 0 0;
+    }
+
+    .main__price {
+        margin-bottom: 10px;
     }
 
 }
 
 
-@media (min-width: 1000px) { 
+@media (min-width: 1055px) { 
     .main__price-container {
         flex-direction: column;
         align-items: flex-start;
+    }
+
+    .subtitle {
+        font-size: 2.8rem;
     }
 
     .cart-container {
